--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,37 @@
+/*
+App
+ */
+.App {
+    text-align: center;
+    margin-top: 50px;
+}
+
+h1 {
+    font-size: 24px;
+    color: #000000;
+}
+
+.connected {
+    font-size: 16px;
+    color: #008000;
+}
+
+.not-connected {
+    font-size: 16px;
+    color: #FF0000;
+}
+
+.main-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    position: relative;
+}
+
+
+/*
+Generate Terraform
+ */
 .terraform-button {
     width: 160px;
     height: 40px;
